fixed flicker style

--- a/flickr1.css
+++ b/flickr1.css
@@ -1,8 +1,8 @@
 #flickr-section img {
-    transform: rotate3d(-.5,.5, -.5, 26deg);
+    transform: rotate3d(0,.5, 0, 26deg);
     position: relative;
-    left: -8%;
+    left: 1%;
     bottom: 6%;
     margin-top: 1%;
-    width: 34%;
+    width: 50%;
 }
